log
Sat Apr 23 01:31:30 UTC 2022: 
 tests:  1|8
total_score: 0/70
b55c71a
Sat Apr 23 06:39:47 UTC 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
fa36367
Sat Apr 23 07:18:40 UTC 2022: 
 treemap.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:12: error: ‘new’ undeclared (first use in this function); did you mean ‘getw’?
     return new;
            ^~~
            getw
treemap.c:48:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:10: error: ‘aux’ undeclared (first use in this function)
   tree * aux=map->root;
          ^~~
treemap.c:87:14: error: ‘map’ undeclared (first use in this function)
   tree * aux=map->root;
              ^~~
treemap.c:92:6: error: expected ‘(’ before ‘else’
   if else(key>aux->key)
      ^~~~
treemap.c: In function ‘createTreeMap’:
treemap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
a788cb1
Sat Apr 23 07:19:22 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:10: error: ‘aux’ undeclared (first use in this function)
   tree * aux=map->root;
          ^~~
treemap.c:87:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:87:14: error: ‘map’ undeclared (first use in this function)
   tree * aux=map->root;
              ^~~
treemap.c:92:6: error: expected ‘(’ before ‘else’
   if else(key>aux->key)
      ^~~~
treemap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
1abc745
Sat Apr 23 07:20:32 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   treeNode * aux=map->root;
   ^~~~~~~~
   TreeNode
treemap.c:87:18: error: ‘map’ undeclared (first use in this function)
   treeNode * aux=map->root;
                  ^~~
treemap.c:87:18: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:88:10: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘key’
   if(tree->key==aux->key)
          ^~
treemap.c:88:20: error: request for member ‘key’ in something not a structure or union
   if(tree->key==aux->key)
                    ^~
treemap.c:90:15: error: request for member ‘data’ in something not a structure or union
     return aux->data;
               ^~
treemap.c:92:6: error: expected ‘(’ before ‘else’
   if else(tree->key>aux->key)
      ^~~~
treemap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
34f6a9f
Sat Apr 23 07:21:06 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   treeNode * aux=tree->root;
   ^~~~~~~~
   TreeNode
treemap.c:87:18: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   treeNode * aux=tree->root;
                  ^~~~
treemap.c:88:14: error: request for member ‘key’ in something not a structure or union
   if(key==aux->key)
              ^~
treemap.c:90:15: error: request for member ‘data’ in something not a structure or union
     return aux->data;
               ^~
treemap.c:92:6: error: expected ‘(’ before ‘else’
   if else(key>aux->key)
      ^~~~
treemap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b715f04
Sat Apr 23 07:21:46 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   treeNode * aux=*tree->root;
   ^~~~~~~~
   TreeNode
treemap.c:87:18: error: incompatible types when initializing type ‘int *’ using type ‘TreeNode {aka struct TreeNode}’
   treeNode * aux=*tree->root;
                  ^
treemap.c:88:14: error: request for member ‘key’ in something not a structure or union
   if(key==aux->key)
              ^~
treemap.c:90:15: error: request for member ‘data’ in something not a structure or union
     return aux->data;
               ^~
treemap.c:92:6: error: expected ‘(’ before ‘else’
   if else(key>aux->key)
      ^~~~
treemap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
e266edf
Sat Apr 23 07:22:18 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   treeNode * aux=*tree->root;
   ^~~~~~~~
   TreeNode
treemap.c:87:18: error: incompatible types when initializing type ‘int *’ using type ‘TreeNode {aka struct TreeNode}’
   treeNode * aux=*tree->root;
                  ^
treemap.c:88:14: error: request for member ‘key’ in something not a structure or union
   if(key==aux->key)
              ^~
treemap.c:90:15: error: request for member ‘data’ in something not a structure or union
     return aux->data;
               ^~
treemap.c:92:13: error: request for member ‘key’ in something not a structure or union
   if(key>aux->key)
             ^~
treemap.c:94:12: error: request for member ‘right’ in something not a structure or union
     aux=aux->right;
            ^~
treemap.c:95:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
treemap.c:98:12: error: request for member ‘left’ in something not a structure or union
     aux=aux->left;
            ^~
treemap.c:99:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1: all warnings being treated as errors
Compilation failed
f465454
Sat Apr 23 07:23:17 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   treeNode * aux:
   ^~~~~~~~
   TreeNode
treemap.c:87:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
   treeNode * aux:
                 ^
treemap.c:89:11: error: ‘aux’ undeclared (first use in this function)
   if(key==aux->key)
           ^~~
treemap.c:89:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a65089d
Sat Apr 23 07:23:28 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
   TreeNode * aux:
                 ^
treemap.c:87:17: error: expected expression before ‘:’ token
treemap.c:89:11: error: ‘aux’ undeclared (first use in this function)
   if(key==aux->key)
           ^~~
treemap.c:89:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
69c4386
Sat Apr 23 07:24:23 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:89:14: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
   if(key==aux->key)
              ^~
treemap.c:91:15: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘data’
     return aux->data;
               ^~
treemap.c:93:13: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
   if(key>aux->key)
             ^~
treemap.c:96:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
treemap.c:100:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1: all warnings being treated as errors
Compilation failed
acdc072
Sat Apr 23 07:27:38 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:88:6: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
   aux=tree->root;
      ^
treemap.c:89:14: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘key’
   if(key==aux->key)
              ^~
treemap.c:91:15: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘data’
     return aux->data;
               ^~
treemap.c:93:13: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘key’
   if(key>aux->key)
             ^~
treemap.c:95:12: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘right’
     aux=aux->right;
            ^~
treemap.c:96:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
treemap.c:99:12: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘left’
     aux=aux->left;
            ^~
treemap.c:100:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1: all warnings being treated as errors
Compilation failed
5557a2f
